--- a/public-apps/covid19/covid19-sg.rmd
+++ b/public-apps/covid19/covid19-sg.rmd
@@ -236,6 +236,7 @@ renderPlot({
   data2b = dcast(data2b, confirmed.at.date ~ infection.type, value.var="N")
   data2b[is.na(data2b)] = 0
   data2b$prop_unlinked = data2b$`Local unlinked` / (data2b$`Local linked` + data2b$`Local unlinked`) * 100
+  data2b = data2b[ (data2b$`Local linked` + data2b$`Local unlinked`) > 30]
 
   link_scale = 1
 
